// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon default 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    class="emotion-0"
    data-testid="AiOutlineExclamationCircle"
    id="undefined_id"
  />
</span>
`;

exports[`Icon default and id 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    class="emotion-0"
    data-testid="AiOutlineExclamationCircle"
    id="test-id"
  />
</span>
`;

exports[`Icon properties string 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    class="emotion-0"
    data-testid="AiIcon"
    id="test-id"
    title="AiIcon"
  />
</span>
`;

exports[`Icon properties.name 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    class="emotion-0"
    data-testid="AiIcon"
    id="test-id"
    title="AiIcon"
  />
</span>
`;

exports[`Icon properties.name error 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    class="emotion-0"
    color="#F00"
    data-testid="AiOutlineExclamationCircle"
    id="test-id"
    title="ErrorIcon"
  />
</span>
`;

exports[`Icon properties.spin 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    class="emotion-0 icon-spin"
    data-testid="AiOutlineLoading3Quarters"
    id="test-id"
    title="AiIcon"
  />
</span>
`;

exports[`Icon properties.style 1`] = `
.emotion-0 {
  background: yellow;
}

<span
  class="anticon"
  role="img"
>
  <svg
    class="emotion-0"
    data-testid="AiIcon"
    id="test-id"
    title="AiIcon"
  />
</span>
`;
